<resources>
    <string name="app_name">Janta Darbar</string>
    <string name="login_username_hint">Username</string>
    <string name="login_pin_hint">Pin</string>
    <string name="login_button_text">Login</string>
    <string name="application_logo_content_desc">Application Logo</string>
    <string name="news_icon_description">News Icon Image View</string>
    <string name="feed_title_hint">Title</string>
    <string name="feed_description_hint">Description</string>
    <string name="feed_landmark_hint">Landmark</string>
    <string name="feed_ward_n0_hint">Ward N0. :</string>
    <string name="feed_city_hint">City</string>
    <string name="feed_success_btn">Success</string>
    <string name="newsfeed_status_text">Work on Progress!!</string>
    <string name="raise_issue_title_hint">Title Eg: Road, Electricity</string>
    <string name="raise_issue_location_hint">Location Eg: Baywatch hotel</string>
    <string name="raise_issue_ward_hint">Ward No. Eg: 10</string>
    <string name="register_complain_btn_text">Register Complain</string>
    <string name="issue_resolved_status">Issue Resolved</string>

    //Title for activities
    <string name="title_admin_activity">Manage Complaints</string>
    <string name="title_login_activity">Admin Panel</string>
    <string name="register_complaint_title">Register Complaint</string>
    <string name="news_feed_title">News Feed</string>
    <string name="resolved_feed_title">Resolved</string>
    <string name="exit_toast">Touch again to exit</string>
    <string name="snackbar_message">Internet Connection slow!!</string>
    <string name="complaints_feed_title">Complaints</string>
    <string name="logout_dialog_title">Are you sure!!</string>
    <string name="logout_dialog_message">Are you sure to logout from the administrator panel..</string>
    <string name="logout_dialog_positive_btn">Ok</string>
    <string name="login_menu_option">Login</string>
    <string name="logout_menu_option">Logout</string>

</resources>
