<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:id="@+id/headerContainer"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/newsIcon"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/register"
                    android:contentDescription="@string/news_icon_description" />

                <TextView
                    android:id="@+id/complainTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/newsIcon"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold"
                    android:hint="@string/feed_title_hint"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#757575"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/description"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="80dp"
                android:hint="@string/feed_description_hint"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/landmark"
                android:hint="@string/feed_landmark_hint"
                android:textAppearance="?android:textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ward_label"
                    android:text="@string/feed_ward_n0_hint"
                    android:textAppearance="?android:textAppearanceSmall" />


                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:id="@+id/ward_no"
                    android:textAppearance="?android:textAppearanceSmall" />

            </LinearLayout>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:hint="@string/feed_city_hint"
                android:textAppearance="?android:textAppearanceSmall" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/newsfeed_status_text"
                    android:textColor="#F57F17"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:textAppearance="?android:textAppearanceSmall"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>